@@ -21,9 +21,10 @@ clear from the following blowups:
 </table>
 <p>
 Another typical aspect of hand-engraved scores is the general look of
-the symbols: they never have sharp corners. We suspect that this is
-due to the mechanics of the reproduction process.  This general
-rounded shape is also present in all glyphs of our "Feta" font.
+the symbols. They almost never have sharp corners. This is because
+sharp corners are fragile and quickly wear out when stamping in metal.
+The general rounded shape of music symbols is also present in all
+glyphs of our "Feta" font.
 
 
 
